@@ -1,30 +1,3 @@
-- try
-
-	$ vips shrink Chicago.png x.png 228 228 --vips-progress
-	vips temp-4: 4 threads, 128 x 16 tiles, groups of 1280 scanlines
-	**
-	VIPS:ERROR:vipspng.c:431:png2vips_generate: assertion failed: (r->top
-	== read->y_pos)
-	$
-
-  but
-
-  	$ vipsthumbnail Chicago.png 
-	memory: high-water mark 66.96 MB
-	john@bambam ~/pics $ vipsthumbnail Chicago.png --verbose
-	thumbnailing Chicago.png
-	detected format as png
-	thumbnailing Chicago.png as ./tn_Chicago.jpg
-	integer shrink by 228
-	residual scale by 1
-	bilinear interpolation
-	sharpening thumbnail
-	memory: high-water mark 66.96 MB
-	$
-
-  is the extra cache that vipsthumbnail adds essential now? does that mean
-  that the mediawiki scalr can never work?
-
 
 - look at
 	
